--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -52,27 +52,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'mars_news_db'), 'articles')\n"
+      "collection; Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'mars_news_db'), 'articles')\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'mars_news_db'), 'articles')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Define database and collection  from Eli's Stu_Reddit_Scraper for 12.2.4 that he slacked to us at 7:51 on 3/16\n",
     "db = client.mars_news_db\n",
     "collection = db.articles\n",
-    "\n",
-    "print(collection)\n",
-    "collection"
+    "print(f'collection; {collection}')\n"
    ]
   },
   {
@@ -91,8 +79,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "news_title: NASA's Curiosity Rover Finds an Ancient Oasis on Mars\n",
-      "news_body: New evidence suggests salty, shallow ponds once dotted a Martian crater — a sign of the planet's drying climate.\n"
+      "news_title: NASA's Mars 2020 Rover Goes Coast-to-Coast to Prep for Launch\n",
+      "news_body: The agency's first step in returning rocks from Mars just arrived at Kennedy Space Center. The Mars 2020 team now begins readying for a launch to the Red Planet this July.\n"
      ]
     }
    ],
@@ -109,7 +97,6 @@
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
     "#print(soup.prettify())\n",
-    "#print(soup)\n",
     "\n",
     "news_title =soup.find(\"div\", \"content_title\").get_text()\n",
     "news_body = soup.find(\"div\", \"article_teaser_body\").get_text()\n",
@@ -144,9 +131,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "image/featured/mars1.jpg\n",
-      "\n",
       "featured_image_url: https://spaceimages-mars.com/image/featured/mars1.jpg\n",
       "\n"
      ]
@@ -165,15 +149,9 @@
     "\n",
     "# Create BeautifulSoup object; parse with 'html.parser'\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
-    "\n",
     "# print(soup.prettify())\n",
-    "# print(soup)\n",
     "\n",
     "fade_in_image = soup.find_all(\"img\", \"headerimage fade-in\")\n",
-    "print()\n",
-    "print(fade_in_image[0]['src'])\n",
-    "print()\n",
-    "\n",
     "featured_image_url=url + fade_in_image[0]['src']\n",
     "print(f'featured_image_url: {featured_image_url}')\n",
     "print()"
@@ -210,7 +188,7 @@
       "2                    Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
       "3                   Moons:                2                1\n",
       "4       Distance from Sun:   227,943,824 km   149,598,262 km\n",
-      "<table border=\"1\" class=\"dataframe\">\n",
+      "html_table: <table border=\"1\" class=\"dataframe\">\n",
       "  <thead>\n",
       "    <tr style=\"text-align: right;\">\n",
       "      <th></th>\n",
@@ -280,8 +258,7 @@
     "\n",
     "# Convert df to html\n",
     "html_table = df.to_html()\n",
-    "html_table\n",
-    "print(html_table)"
+    "print(f'html_table: {html_table}')"
    ]
   },
   {
@@ -319,18 +296,9 @@
     "\n",
     "# Create BeautifulSoup object; parse with 'html.parser'\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
+    "# print(soup.prettify())\n",
     "\n",
-    "# # print(soup.prettify())\n",
-    "# print(\"-----------------\")\n",
-    "# print(\"soup\")\n",
-    "# print(soup)\n",
-    "# print(\"-----------------\")\n",
-    "\n",
-    "#results = soup.find_all('h3')\n",
     "results = soup.find_all('div', class_='item')\n",
-    "# print(\"******************\")\n",
-    "# print(\"results with div class item results\")\n",
-    "# print(f'results: {results}')\n",
     "\n",
     "i = 0\n",
     "titles = {}\n",
@@ -356,8 +324,6 @@
     "#             print(f\"title in title != '': {title}\")\n",
     "            \n",
     "\n",
-    "\n",
-    "\n",
     "            # Click on proper enhanced image button\n",
     "            browser.links.find_by_partial_text(title).click()\n",
     "#             print(\"Should sleep for 0.5\")\n",
@@ -376,27 +342,15 @@
     "                # Error handling\n",
     "                try:\n",
     "                    link = enhanced_result.a['href']\n",
-    "#                     print()\n",
-    "#                     print('''''''''''''''''''')\n",
-    "#                     print(\"link\")\n",
     "#                     print(link)\n",
-    "#                     print('''''''''''''''''''')\n",
-    "#                     print\n",
     "                    img_url=url + link\n",
-    "#                     print(\"img_url\")\n",
     "#                     print(img_url)\n",
-    "#                     print()\n",
-    "#                     img_urls[i]=img_url\n",
-    "#                     print(f'img_urls (plural): {img_urls}')\n",
-    "\n",
     "                except Exception as e:\n",
     "                    print(e)\n",
-    "#             print()\n",
-    "#             print(\"+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\")\n",
+    "            \n",
     "#             print(f'title: {title}')\n",
     "#             print(f'img_url: {img_url}')\n",
-    "#             print(\"+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\")\n",
-    "#             print()\n",
+    "\n",
     "    \n",
     "            #Assigning value to a specific key. This key will be added if its not available already. \n",
     "            Enhanced_dict[title] = img_url\n",
