--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -79,8 +79,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "news_title: NASA's Mars 2020 Rover Goes Coast-to-Coast to Prep for Launch\n",
-      "news_body: The agency's first step in returning rocks from Mars just arrived at Kennedy Space Center. The Mars 2020 team now begins readying for a launch to the Red Planet this July.\n"
+      "news_title: NASA's InSight Flexes Its Arm While Its 'Mole' Hits Pause\n",
+      "news_body: Now that the lander's robotic arm has helped the mole get underground, it will resume science activities that have been on hold.\n"
      ]
     }
    ],
@@ -182,6 +182,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "tables\n",
+      "[                         0                1                2\n",
+      "0  Mars - Earth Comparison             Mars            Earth\n",
+      "1                Diameter:         6,779 km        12,742 km\n",
+      "2                    Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+      "3                   Moons:                2                1\n",
+      "4       Distance from Sun:   227,943,824 km   149,598,262 km\n",
+      "5          Length of Year:   687 Earth days      365.24 days\n",
+      "6             Temperature:     -87 to -5 °C      -88 to 58°C,                       0                              1\n",
+      "0  Equatorial Diameter:                       6,792 km\n",
+      "1       Polar Diameter:                       6,752 km\n",
+      "2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
+      "3                Moons:          2 ( Phobos & Deimos )\n",
+      "4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
+      "5         Orbit Period:           687 days (1.9 years)\n",
+      "6  Surface Temperature:                   -87 to -5 °C\n",
+      "7         First Record:              2nd millennium BC\n",
+      "8          Recorded By:           Egyptian astronomers]\n",
       "                         0                1                2\n",
       "0  Mars - Earth Comparison             Mars            Earth\n",
       "1                Diameter:         6,779 km        12,742 km\n",
@@ -251,7 +269,10 @@
     "tables = pd.read_html(url)\n",
     "# tables\n",
     "# print(type(tables)) #BZ saw it returns list class\n",
-    "# tables\n",
+    "print(\"tables\")\n",
+    "print(tables)\n",
+    "print\n",
+    "\n",
     "# Get Dataframe of first table\n",
     "df = tables[0]\n",
     "print(df.head())\n",
