--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,13 @@
     "import pandas as pd\n",
     "import time\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
-    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
-    "browser = Browser(\"chrome\", **executable_path, headless=False)"
+    "# executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "# browser = Browser(\"chrome\", **executable_path, headless=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "collection; Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'mars_news_db'), 'articles')\n"
+     ]
+    }
+   ],
    "source": [
     "# Define database and collection  from Eli's Stu_Reddit_Scraper for 12.2.4 that he slacked to us at 7:51 on 3/16\n",
     "db = client.mars_news_db\n",
@@ -51,38 +59,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 100.0.4896\n",
+      "Get LATEST chromedriver version for 100.0.4896 google-chrome\n",
+      "Driver [C:\\Users\\BZ Northwestern BC\\.wdm\\drivers\\chromedriver\\win32\\100.0.4896.60\\chromedriver.exe] found in cache\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "news_title: NASA to Hold Mars 2020 Perseverance Rover Launch Briefing\n",
+      "news_p: Learn more about the agency's next Red Planet mission during a live event on June 17.\n"
+     ]
+    }
+   ],
    "source": [
-    "# URL of page to be scraped\n",
+    "# Set-up path and browser\n",
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser(\"chrome\", **executable_path, headless=False)\n",
+    "# Scrape Mars News\n",
+    "# Visit the mars nasa news site\n",
     "url = 'https://redplanetscience.com/'\n",
-    "\n",
-    "# Retrieve page with the requests module\n",
-    "# response = requests.get(url)\n",
     "browser.visit(url)\n",
+    "\n",
+    "# Optional delay for loading the page\n",
+    "browser.is_element_present_by_css('div.list_text', wait_time=1)\n",
+    "\n",
+    "# Convert the browser html to a soup object and then quit the browser\n",
     "html = browser.html\n",
+    "news_soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
-    "# Create BeautifulSoup object; parse with 'html.parser'\n",
-    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "# Add try/except for error handling\n",
+    "try:\n",
+    "    slide_elem = news_soup.select_one('div.list_text')\n",
+    "    # Use the parent element to find the first 'a' tag and save it as 'news_title'\n",
+    "    news_title = slide_elem.find(\"div\", class_=\"content_title\").get_text()\n",
+    "    # Use the parent element to find the paragraph text\n",
+    "    news_p = slide_elem.find(\"div\", class_=\"article_teaser_body\").get_text()\n",
     "\n",
-    "#print(soup.prettify())\n",
+    "except Exception as e:\n",
+    "    print()\n",
+    "    print(f'error: {e}')\n",
+    "    print()\n",
+    "    browser.quit()\n",
     "\n",
-    "news_title =soup.find(\"div\", \"content_title\").get_text()\n",
-    "news_body = soup.find(\"div\", \"article_teaser_body\").get_text()\n",
-    "news_title = news_title.replace(news_body, '')\n",
-    "\n",
+    "browser.quit()\n",
     "print(f'news_title: {news_title}')\n",
-    "print(f'news_body: {news_body}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "browser.quit()"
+    "print(f'news_p: {news_p}')\n"
    ]
   },
   {
@@ -94,37 +127,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 100.0.4896\n",
+      "Get LATEST chromedriver version for 100.0.4896 google-chrome\n",
+      "Driver [C:\\Users\\BZ Northwestern BC\\.wdm\\drivers\\chromedriver\\win32\\100.0.4896.60\\chromedriver.exe] found in cache\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "featured_image_url: https://spaceimages-mars.com/image/featured/mars1.jpg\n"
+     ]
+    }
+   ],
    "source": [
+    "# Step 1 - Scraping:  JPL Mars Space Images - Featured Mars Image\n",
+    "\n",
+    "# Set-up path and browser\n",
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
     "browser = Browser(\"chrome\", **executable_path, headless=False)\n",
     "url = 'https://spaceimages-mars.com/'\n",
     "\n",
     "# Retrieve page with the visit module\n",
     "browser.visit(url)\n",
     "html = browser.html\n",
+    "time.sleep(1)\n",
     "\n",
-    "# Click on \"FULL IMAGE\" button\n",
-    "browser.links.find_by_partial_text('FULL IMAGE').click()\n",
+    "try: \n",
+    "    # Click on \"FULL IMAGE\" button\n",
+    "    browser.links.find_by_partial_text('FULL IMAGE').click()\n",
+    "    time.sleep(1)\n",
     "\n",
-    "# Create BeautifulSoup object; parse with 'html.parser'\n",
-    "soup = BeautifulSoup(html, 'html.parser')\n",
-    "# print(soup.prettify())\n",
+    "    # Create BeautifulSoup object; parse with 'html.parser'\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "    # print(soup.prettify())\n",
     "\n",
-    "fade_in_image = soup.find_all(\"img\", \"headerimage fade-in\")\n",
-    "featured_image_url=url + fade_in_image[0]['src']\n",
-    "print(f'featured_image_url: {featured_image_url}')\n",
-    "print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "browser.quit()"
+    "    # Find full size image\n",
+    "    fade_in_image = soup.find_all(\"img\", \"headerimage fade-in\")\n",
+    "    featured_image_url=url + fade_in_image[0]['src']\n",
+    "    browser.quit()\n",
+    "\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f'error: {e}')\n",
+    "    browser.quit()\n",
+    "print(f'featured_image_url: {featured_image_url}')\n"
    ]
   },
   {
@@ -136,25 +193,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 100.0.4896\n",
+      "Get LATEST chromedriver version for 100.0.4896 google-chrome\n",
+      "Driver [C:\\Users\\BZ Northwestern BC\\.wdm\\drivers\\chromedriver\\win32\\100.0.4896.60\\chromedriver.exe] found in cache\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "html_table: <table border=\"1\" class=\"dataframe\">\n",
+      "  <thead>\n",
+      "    <tr style=\"text-align: right;\">\n",
+      "      <th></th>\n",
+      "      <th>Mars</th>\n",
+      "      <th>Earth</th>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Description</th>\n",
+      "      <th></th>\n",
+      "      <th></th>\n",
+      "    </tr>\n",
+      "  </thead>\n",
+      "  <tbody>\n",
+      "    <tr>\n",
+      "      <th>Mars - Earth Comparison</th>\n",
+      "      <td>Mars</td>\n",
+      "      <td>Earth</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Diameter:</th>\n",
+      "      <td>6,779 km</td>\n",
+      "      <td>12,742 km</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Mass:</th>\n",
+      "      <td>6.39 × 10^23 kg</td>\n",
+      "      <td>5.97 × 10^24 kg</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Moons:</th>\n",
+      "      <td>2</td>\n",
+      "      <td>1</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Distance from Sun:</th>\n",
+      "      <td>227,943,824 km</td>\n",
+      "      <td>149,598,262 km</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Length of Year:</th>\n",
+      "      <td>687 Earth days</td>\n",
+      "      <td>365.24 days</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Temperature:</th>\n",
+      "      <td>-87 to -5 °C</td>\n",
+      "      <td>-88 to 58°C</td>\n",
+      "    </tr>\n",
+      "  </tbody>\n",
+      "</table>\n"
+     ]
+    }
+   ],
    "source": [
-    "url = 'https://galaxyfacts-mars.com/'\n",
+    "    # Step 1 - Scraping:  JPL Mars Space Images - Mars Facts\n",
     "\n",
-    "tables = pd.read_html(url)\n",
-    "# tables\n",
-    "# print(type(tables)) #BZ saw it returns list class\n",
-    "print(\"tables\")\n",
-    "print(tables)\n",
-    "print\n",
+    "    # Set-up path and browser\n",
+    "    executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "    browser = Browser(\"chrome\", **executable_path, headless=False)\n",
+    "    url = 'https://galaxyfacts-mars.com/'\n",
     "\n",
-    "# Get Dataframe of first table\n",
-    "df = tables[0]\n",
-    "print(df.head())\n",
+    "    try:\n",
+    "        tables = pd.read_html(url)\n",
+    "        time.sleep(1)\n",
+    "        # Get Dataframe of first table\n",
+    "        # print(f'($$$$$$$$$$$$$$$$$$$$$$$$$$$$$Tables in mars_facts is: {tables}')\n",
+    "        mars_facts_df = tables[0]\n",
+    "        mars_facts_df.rename(columns={0: \"Description\", 1: \"Mars\", 2: \"Earth\"}, inplace=True)\n",
+    "        mars_facts_df=mars_facts_df.set_index(\"Description\")\n",
+    "        html_table = mars_facts_df.to_html()\n",
+    "        browser.quit()\n",
     "\n",
-    "# Convert df to html\n",
-    "html_table = df.to_html()\n",
+    "    except Exception as e:\n",
+    "        print()\n",
+    "        print(\"?????????????????????????? Exception in mars_facts ????????????????????????????????\")\n",
+    "        print(f'error: {e}')\n",
+    "        print()\n",
+    "        browser.quit()\n",
     "print(f'html_table: {html_table}')"
    ]
   },
@@ -167,24 +303,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "collection; Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'mars'), 'articles')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Current google-chrome version is 100.0.4896\n",
+      "Get LATEST chromedriver version for 100.0.4896 google-chrome\n",
+      "Driver [C:\\Users\\BZ Northwestern BC\\.wdm\\drivers\\chromedriver\\win32\\100.0.4896.60\\chromedriver.exe] found in cache\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hemisphere_image_urls: [{'title': 'Cerberus Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/full.jpg'}, {'title': 'Schiaparelli Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg'}, {'title': 'Syrtis Major Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}]\n"
+     ]
+    }
+   ],
    "source": [
+    "# Converted my Jupyter Notebook mission_to_mars.ipynb into to scrape_mars.py\n",
+    "# then bloked off key funtions \n",
+    "# Dependencies\n",
+    "# Started with scrape_costa.py basics and added more over time\n",
+    "\n",
+    "from splinter import Browser\n",
+    "from bs4 import BeautifulSoup\n",
+    "import time\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "\n",
+    "import requests\n",
+    "import pymongo\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "# Initialize PyMongo to work with MongoDBs\n",
+    "conn = 'mongodb://localhost:27017'\n",
+    "client = pymongo.MongoClient(conn)\n",
+    "\n",
+    "# Define database and collection  from Eli's Stu_Reddit_Scraper for 12.2.4 that he slacked to us at 7:51 on 3/16\n",
+    "db = client.mars\n",
+    "collection = db.articles\n",
+    "print(f'collection; {collection}')\n",
+    "\n",
+    "\n",
+    "# Step 1 - Scraping:  Mars Hemispheres\n",
+    "\n",
+    "# Set-up path and browser\n",
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
     "browser = Browser(\"chrome\", **executable_path, headless=False)\n",
     "url = 'https://marshemispheres.com/'\n",
     "\n",
     "# Retrieve page with the visit module\n",
     "browser.visit(url)\n",
-    "\n",
     "html = browser.html\n",
-    "# print(\"html\")\n",
-    "# print(html)\n",
     "\n",
     "# Create BeautifulSoup object; parse with 'html.parser'\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "# print(soup.prettify())\n",
-    "\n",
     "results = soup.find_all('div', class_='item')\n",
     "\n",
     "i = 0\n",
@@ -194,109 +389,59 @@
     "mydict ={}\n",
     "hemisphere_image_urls = []\n",
     "\n",
-    "# Next look for <h3>\n",
+    "\n",
+    "# Next look for <h3> (title) and title link to click while on intial page\n",
     "for result in results:\n",
     "    # Error handling\n",
     "    try:\n",
     "        # Identify and return title of listing\n",
     "        title = results[i].find('h3').text\n",
-    "#         print(f'title within try loop: {title}')\n",
     "        titles[i]=title\n",
-    "#         print(f'titles (plural): {titles}')\n",
-    "        \n",
+    "\n",
     "        # Run only if title is available\n",
     "        if (title != ''):\n",
-    "            # Print results\n",
-    "#             print('-------------')\n",
-    "#             print(f\"title in title != '': {title}\")\n",
-    "            \n",
     "\n",
     "            # Click on proper enhanced image button\n",
     "            browser.links.find_by_partial_text(title).click()\n",
-    "#             print(\"Should sleep for 0.5\")\n",
-    "            time.sleep(0.5)\n",
+    "            time.sleep(1)\n",
     "\n",
+    "            # Next look for 'downloads to find the actual link\n",
     "            html = browser.html\n",
-    "            # print(\"html\")\n",
     "            # print(html)\n",
     "\n",
     "            # Create BeautifulSoup object; parse with 'html.parser'; find description iterables\n",
     "            enhanced_soup = BeautifulSoup(html, 'html.parser')\n",
-    "            enhanced_results = enhanced_soup.find_all('div', class_='description')\n",
+    "            enhanced_results = enhanced_soup.find_all('div', class_='downloads')\n",
     "\n",
     "            # Loop through returned results\n",
     "            for enhanced_result in enhanced_results:\n",
     "                # Error handling\n",
     "                try:\n",
     "                    link = enhanced_result.a['href']\n",
-    "#                     print(link)\n",
     "                    img_url=url + link\n",
-    "#                     print(img_url)\n",
     "                except Exception as e:\n",
     "                    print(e)\n",
-    "            \n",
-    "#             print(f'title: {title}')\n",
-    "#             print(f'img_url: {img_url}')\n",
+    "            hemisphere_image_urls.append(\n",
+    "                {\n",
+    "                    'title': title,\n",
+    "                    'img_url': img_url,\n",
+    "                }\n",
+    "            )\n",
     "\n",
-    "    \n",
-    "            #Assigning value to a specific key. This key will be added if its not available already. \n",
-    "            Enhanced_dict[title] = img_url\n",
-    "            # print(f'Enhanced_dict is now: {Enhanced_dict}')\n",
-    "            \n",
+    "\n",
     "            # Click on back button to return to home page\n",
     "            browser.links.find_by_partial_text('Back').click()\n",
-    "#             print(\"Should sleep for 0.5\")\n",
-    "            time.sleep(0.5)\n",
-    "            \n",
+    "            time.sleep(1)\n",
+    "\n",
     "    except Exception as e:\n",
+    "        browser.quit()\n",
     "        print(f'error: {e}')\n",
+    "\n",
     "    i+=1\n",
     "\n",
-    "hemisphere_image_urls = [Enhanced_dict]\n",
-    "print()\n",
-    "print(f'hemisphere_image_urls: {hemisphere_image_urls}')\n",
-    "print()\n",
-    "# print(f'titles: {titles}')\n",
-    "# print(f'img_urls (plural): {img_urls}')\n",
-    "# print(\"Done\")"
+    "browser.quit()\n",
+    "print (f'hemisphere_image_urls: {hemisphere_image_urls}')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "browser.quit()    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Step 2 - MongoDB and Flask Application"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
