--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -78,8 +78,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "news_title: NASA to Hold Mars 2020 Perseverance Rover Launch Briefing\n",
-      "news_p: Learn more about the agency's next Red Planet mission during a live event on June 17.\n"
+      "news_title: A Year of Surprising Science From NASA's InSight Mars Mission\n",
+      "news_p: A batch of new papers summarizes the lander's findings above and below the surface of the Red Planet.\n"
      ]
     }
    ],
@@ -146,7 +146,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "featured_image_url: https://spaceimages-mars.com/image/featured/mars1.jpg\n"
+      "featured_image_url: https://spaceimages-mars.com/image/featured/mars3.jpg\n"
      ]
     }
    ],
